Guarda un objeto solo.

--- a/PryectoRIT/nbproject/project.properties
+++ b/PryectoRIT/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/PryectoRIT.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jsoup-1.11.3.jar=C:\\Users\\Jorge\\Documents\\TEC\\VII Semestre\\RIT 2\\jsoup-1.11.3.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jsoup-1.11.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
