Clase de lucene implementada

--- a/PryectoRIT/nbproject/project.properties
+++ b/PryectoRIT/nbproject/project.properties
@@ -28,10 +28,16 @@ dist.jar=${dist.dir}/PryectoRIT.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jsoup-1.11.3.jar=C:\\Users\\Jorge\\Documents\\TEC\\VII Semestre\\RIT 2\\jsoup-1.11.3.jar
+file.reference.jsoup-1.11.3.jar-1=jsoup-1.11.3.jar
+file.reference.lucene-core-7.5.0.jar=C:\\Users\\AARON\\Documents\\TEC\\RIT\\lucene-7.5.0\\core\\lucene-core-7.5.0.jar
+file.reference.lucene-queryparser-7.5.0.jar=C:\\Users\\AARON\\Documents\\TEC\\RIT\\lucene-7.5.0\\queryparser\\lucene-queryparser-7.5.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jsoup-1.11.3.jar}
+    ${file.reference.jsoup-1.11.3.jar}:\
+    ${file.reference.jsoup-1.11.3.jar-1}:\
+    ${file.reference.lucene-core-7.5.0.jar}:\
+    ${file.reference.lucene-queryparser-7.5.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
