--- a/PryectoRIT/nbproject/project.properties
+++ b/PryectoRIT/nbproject/project.properties
@@ -27,6 +27,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/PryectoRIT.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-lang3-3.8.1.jar=commons-lang3-3.8.1.jar
 file.reference.jsoup-1.11.3.jar=C:\\Users\\Jorge\\Documents\\TEC\\VII Semestre\\RIT 2\\jsoup-1.11.3.jar
 file.reference.jsoup-1.11.3.jar-1=jsoup-1.11.3.jar
 file.reference.lucene-core-7.5.0.jar=C:\\Users\\AARON\\Documents\\TEC\\RIT\\lucene-7.5.0\\core\\lucene-core-7.5.0.jar
@@ -37,7 +38,8 @@ javac.classpath=\
     ${file.reference.jsoup-1.11.3.jar}:\
     ${file.reference.jsoup-1.11.3.jar-1}:\
     ${file.reference.lucene-core-7.5.0.jar}:\
-    ${file.reference.lucene-queryparser-7.5.0.jar}
+    ${file.reference.lucene-queryparser-7.5.0.jar}:\
+    ${file.reference.commons-lang3-3.8.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
