--- a/PryectoRIT/nbproject/project.properties
+++ b/PryectoRIT/nbproject/project.properties
@@ -30,8 +30,11 @@ excludes=
 file.reference.commons-lang3-3.8.1.jar=commons-lang3-3.8.1.jar
 file.reference.jsoup-1.11.3.jar=C:\\Users\\Jorge\\Documents\\TEC\\VII Semestre\\RIT 2\\jsoup-1.11.3.jar
 file.reference.jsoup-1.11.3.jar-1=jsoup-1.11.3.jar
+file.reference.lucene-analyzers-common-7.5.0.jar=lucene-analyzers-common-7.5.0.jar
 file.reference.lucene-core-7.5.0.jar=C:\\Users\\AARON\\Documents\\TEC\\RIT\\lucene-7.5.0\\core\\lucene-core-7.5.0.jar
+file.reference.lucene-core-7.5.0.jar-1=lucene-core-7.5.0.jar
 file.reference.lucene-queryparser-7.5.0.jar=C:\\Users\\AARON\\Documents\\TEC\\RIT\\lucene-7.5.0\\queryparser\\lucene-queryparser-7.5.0.jar
+file.reference.lucene-queryparser-7.5.0.jar-1=lucene-queryparser-7.5.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -39,7 +42,10 @@ javac.classpath=\
     ${file.reference.jsoup-1.11.3.jar-1}:\
     ${file.reference.lucene-core-7.5.0.jar}:\
     ${file.reference.lucene-queryparser-7.5.0.jar}:\
-    ${file.reference.commons-lang3-3.8.1.jar}
+    ${file.reference.commons-lang3-3.8.1.jar}:\
+    ${file.reference.lucene-analyzers-common-7.5.0.jar}:\
+    ${file.reference.lucene-core-7.5.0.jar-1}:\
+    ${file.reference.lucene-queryparser-7.5.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
